--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/AppointyTech/docs#readme",
 	"dependencies": {
 		"@tailwindcss/postcss": "^4.1.10",
+		"@theguild/remark-mermaid": "^0.3.0",
 		"lucide": "^0.479.0",
 		"lucide-react": "^0.479.0",
 		"next": "^15.1.7",
