--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
+		"postbuild": "pagefind --site dist --output-path dist/_pagefind"
 	},
 	"repository": {
 		"type": "module",
